Routing and scrollbar fixing

--- a/App.css
+++ b/App.css
@@ -21,8 +21,8 @@
 }
 
 .navbar-brand {
-  height: 80px;
-  width: 154.27px;
+  height: 60px;
+  width: 124.27px;
   margin-left: 30px;
   margin-bottom: 20px;
 }
@@ -232,6 +232,7 @@ h3 {
       font-weight: 800;
       color: white;
  }
+ 
   }
   @media (min-width:992px) {
   
@@ -475,12 +476,12 @@ font-size: 1.5rem;
     display: flex;
     
 
-    padding-left: 125px;
+    padding-left: 120px;
   }
   
  
   .image-container a img {
-    width: 200px; 
+    width: 183px; 
     height: 50px; 
    
     border-radius: 5px; 
