--- a/Components/CustomCarousel.css
+++ b/Components/CustomCarousel.css
@@ -55,9 +55,9 @@
   
   @media screen and (max-width: 723px){
     .carousel-container {
-        max-width: 400px; 
+        max-width: 350px; 
         margin: 0 auto;
-        margin-left: 30px;
+        margin-left: 10px;
       }
       .prev-button{
         margin-top: -35px;
